adding the rest

--- a/DMD_DMDc.ipynb
+++ b/DMD_DMDc.ipynb
@@ -195,6 +195,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__DMD__  is a  purely data-driven method which finds the best fit linear model to approximate potentialy non-linear dynamics. \n",
+    "In other words, DMD is a combo of Principal component analysis and Fourier transform\n",
+    "\n",
+    "$X^{'} \\simeq  AX,  $ \n",
+    "\n",
+    "*where X is the initial state matrix and $X^{'}$ is a state matrix shifted one step in time,and A (linear opertor) which explains the dynamics. *\n",
+    "\n",
+    "\n",
+    "\n",
+    "__DMD__ approximates leading(dominant) eigenvalues of A without computing A. \n",
+    "We predict the change of the system Without the control. \n",
+    "\n",
+    "Firs step to compute singular value decomposition \n",
+    "\n",
+    "\n",
+    "(1)\n",
+    "U- dominant cohirent patterns of the dynamics (propal orthogonal decomposition) orginised in hierarhical order, so we need only 3 (?) as we will have only 3 actuators. \n",
+    "\n",
+    "\n",
+    "$X=U\\sum V^{*} \\\\\n",
+    "X^{'} = AU\\sum V^{*}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "(2) we project A on U, so we have smaller matrix $\\tilde{A}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$U^{*}X^{'} V \\sum^{-1} = U{*}AU = \\tilde{A}$ \n",
+    "\n",
+    "\n",
+    "(3)\n",
+    "eigenvalues of A\n",
+    "\n",
+    "\n",
+    "$\\tilde{A}W = W \\Lambda $\n",
+    "\n",
+    "(4)\n",
+    "eigenvectors of A (from Kultz 2016): \n",
+    "\n",
+    "\n",
+    "$\\Phi=X^{'} V \\sum^{-1}W$\n",
+    "\n",
+    "\n",
+    "Refferences: _Shmid 2010, Rowley, Mezlic et al. 2009, Tu, Rowley et al. 2014, Kutz, Brunton et al., 2016_\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -662,6 +713,47 @@
    "source": [
     "## DMD with Control\n",
     "### System Identification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__System__\n",
+    "\n",
+    "\\begin{equation}\n",
+    "X^{'}=AX + BY\n",
+    "\\end{equation}\n",
+    "\n",
+    "__We do not know the control matrix (_K_)__\n",
+    "\\begin{equation}x_{k+1} = Ax_{k}+Bu_{k} \\\\\n",
+    "\\end{equation}\n",
+    "__or__\n",
+    "\n",
+    "\\begin{equation}\n",
+    "u=Kx + \\eta\n",
+    "\\end{equation}\n",
+    "\n",
+    "\n",
+    "\\begin{equation}X^{'}=\\end{equation}\n",
+    "\n",
+    "  \\begin{bmatrix}\n",
+    "    A & B \n",
+    "  \\end{bmatrix}\\begin{bmatrix}\n",
+    "    X \\\\\n",
+    "    Y \\\\\n",
+    "  \\end{bmatrix} \n",
+    "\n",
+    "\n",
+    "__We have to simultaneously solve for A and B.__\n",
+    "\n",
+    "\\begin{equation}\n",
+    "CL=A-B^{*}K \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "u=-K^{*}u\n",
+    "\\end{equation}"
    ]
   },
   {
